Revert "Merge pull request #24 from diegox300/joao"
This reverts commit 83b0b308024be5742a4cd5881dbc72cb95e33b6e, reversing
changes made to 335222d249bcc08635ff32c148f49810a394c9f9.
