# src/http/controllers/post/get-all-posts.ts
@@ -1,5 +1,6 @@
 import { Request, Response, NextFunction } from 'express'
-import { makeGetAllPostsUseCase } from '../../../use-cases/factory/make-get-all-posts-usecase'
+import { makeGetAllPostsUseCase } from '../../../use-cases/factory/posts/make-get-all-posts-usecase'
+import { UserType } from '../../../models/user.model'
 
 // Get all posts
 export const getAllPosts = async (
@@ -11,6 +12,12 @@ export const getAllPosts = async (
 
   getAllPostsUseCase
     .execute()
-    .then((posts) => res.status(200).send(posts))
+    .then((posts) => {
+      const postsWithAuthor = posts.map((post) => ({
+        ...post,
+        author: (post.author as UserType).name, // Replace the author ID with the author's name
+      }))
+      res.status(200).send(postsWithAuthor)
+    })
     .catch(next) // Pass the error to the error handling middleware
 }
